Remove old 32 bit windows parts