@@ -63,7 +63,7 @@ ext.mainClass = 'org.quelea.windows.main.MainStub'
 task createQueleaExe64(type: edu.sc.seis.launch4j.tasks.Launch4jLibraryTask) { //Launch4j
     mainClassName = 'org.quelea.windows.main.MainStub'
     mutexName = "queleamutex"
-    supportUrl = "https://groups.google.com/group/quelea-discuss"
+    supportUrl = "https://quelea.discourse.group/"
     icon = "../../icons/logo.ico"
     copyright = "GPLv3"
     bundledJrePath = "winjre64"
@@ -71,18 +71,6 @@ task createQueleaExe64(type: edu.sc.seis.launch4j.tasks.Launch4jLibraryTask) { /
     bundledJre64Bit = true
     outfile = "Quelea64.exe"
 }
-
-//task createQueleaExe(type: edu.sc.seis.launch4j.tasks.Launch4jLibraryTask) { //Launch4j
-//    mainClassName = 'org.quelea.windows.main.MainStub'
-//    mutexName = "queleamutex"
-//    supportUrl = "https://groups.google.com/group/quelea-discuss"
-//    icon = "../../icons/logo.ico"
-//    copyright = "GPLv3"
-//    bundledJrePath = "winjre"
-//    jvmOptions = ["-Dfile.encoding=UTF-8","-Dprism.dirtyopts=false","-Dglass.accessible.force=false","--add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED","--add-exports=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED","--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED","--add-opens java.base/java.lang=ALL-UNNAMED","--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED"]
-//    outfile = "Quelea.exe"
-//}
-//createQueleaExe.dependsOn createQueleaExe64
 
 task copyToDist {
     doLast {
@@ -99,7 +87,6 @@ task copyToDist {
         copy {from "img" into project.distdir + "/img"}
         copy {from "timer" into project.distdir + "/timer"}
         copy {from "src" into project.distdir + "/src"}
-//        copy {from zipTree("bundlejre/winjre.zip") into project.distdir}
         copy {from zipTree("bundlejre/winjre64.zip") into project.distdir}
         copy {from file("build/libs/Quelea.jar") into file(project.distdir)}
         copy {from file("README.TXT") into file(project.distdir)}
